--- a/projects/templates/Base.html
+++ b/projects/templates/Base.html
@@ -7,6 +7,27 @@
       <title>My projects</title>
     </head>
     <body>
+      <header>
+        <nav>
+          <ul>
+          {% if user.is_authenticated %}
+          <li class="nav-item">
+            <a href="{% url 'home' %}">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="{% url 'logout' %}">Logout</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+              <a href="{% url 'signup' %}">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'login' %}">Login</a>
+            </li>
+            {% endif %}
+          </ul>
+        </nav>
+      </header>
       {% block content %}
       {% endblock content %}
     </body>
