--- a/projects/templates/projects/list_projects.html
+++ b/projects/templates/projects/list_projects.html
@@ -3,6 +3,9 @@
   <main>
     <div>
       <h1>My Projects</h1>
+      <p>
+        <a href="{% url 'create_project' %}">Create Project</a>
+      </p>
       {% if list_projects %}
         <table>
           <thead>
