--- a/projects/templates/projects/show_project.html
+++ b/projects/templates/projects/show_project.html
@@ -4,6 +4,9 @@
     <div>
       <h1> {{ show_project.name }} </h1>
         <p> {{ show_project.description }} </p>
+        <p>
+          <a href="{% url 'create_task' %}">Create Task</a>
+        </p>
         <h2> Tasks </h2>
       {% if show_project.tasks.count > 0 %}
         <table>
