--- a/projects/templates/Base.html
+++ b/projects/templates/Base.html
@@ -11,19 +11,12 @@
         <nav>
           <ul>
           {% if user.is_authenticated %}
-          <li class="nav-item">
             <a href="{% url 'home' %}">Home</a>
-          </li>
-          <li class="nav-item">
             <a href="{% url 'logout' %}">Logout</a>
-          </li>
+            <a href="{% url 'show_my_tasks' %}">My Tasks</a>
         {% else %}
-          <li class="nav-item">
               <a href="{% url 'signup' %}">Sign Up</a>
-            </li>
-            <li class="nav-item">
               <a href="{% url 'login' %}">Login</a>
-            </li>
             {% endif %}
           </ul>
         </nav>
