--- a/projects/templates/Base.html
+++ b/projects/templates/Base.html
@@ -11,13 +11,24 @@
         <nav>
           <ul>
           {% if user.is_authenticated %}
-            <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'logout' %}">Logout</a>
-            <a href="{% url 'show_my_tasks' %}">My Tasks</a>
-        {% else %}
-              <a href="{% url 'signup' %}">Sign Up</a>
+            <li>
+              <a href="{% url 'show_my_tasks' %}">My Tasks</a>
+
+            </li>
+            <li>
+              <a href="{% url 'list_projects' %}">My Projects</a>
+            </li>
+            <li>
+              <a href="{% url 'logout' %}">Logout</a>
+            </li>
+          {% else %}
+            <li>
               <a href="{% url 'login' %}">Login</a>
-            {% endif %}
+            </li>
+            <li>
+              <a href="{% url 'signup' %}">Sign Up</a>
+            </li>
+          {% endif %}
           </ul>
         </nav>
       </header>
