--- a/accounts/templates/accounts/registration/signup.html
+++ b/accounts/templates/accounts/registration/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <main>
-        <div>
+        <div class="signup-form">
             <h1>SignUp!</h1>
             <form method="post">
                 {% csrf_token %}
