--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -1,9 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{% static 'css/app.css' %}">
         <title>My projects</title>
     </head>
     <body>
@@ -20,6 +23,12 @@
                         <li>
                             <a href="{% url 'logout' %}">Logout</a>
                         </li>
+                        <div class="search">
+                        <form action="{% url 'search_projects' %}" method="get">
+                            <input type="text" name="q" placeholder="Search...">
+                            <button>Search</button>
+                        </form>
+                        </div>
                     {% else %}
                         <li>
                             <a href="{% url 'login' %}">Login</a>
