--- a/projects/templates/projects/create_project.html
+++ b/projects/templates/projects/create_project.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <main>
-        <div>
+        <div class="project-form">
             <h1>Create New Project</h1>
             <form method="post">
                 {% csrf_token %}
