--- a/projects/templates/projects/show_project.html
+++ b/projects/templates/projects/show_project.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <main>
-        <div>
+        <div class="project-detail">
             <h1>{{ show_project.name }}</h1>
             <p>{{ show_project.description }}</p>
             <p>
