--- a/tasks/templates/tasks/show_my_tasks.html
+++ b/tasks/templates/tasks/show_my_tasks.html
@@ -2,9 +2,12 @@
 
 {% block content %}
     <main>
-        <div>
+        <div class="my-tasks-list">
             <h1>My Tasks</h1>
             {% if show_my_tasks %}
+                <p>
+                    <a href="{% url 'add_notes' %}">Add Notes</a>
+                </p>
                 <table>
                     <thead>
                         <tr>
@@ -12,6 +15,7 @@
                             <th>Start date</th>
                             <th>Due date</th>
                             <th>Is completed</th>
+                            <th>Notes</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -21,6 +25,7 @@
                                 <td>{{ task.start_date }}</td>
                                 <td>{{ task.due_date }}</td>
                                 <td>{{ task.is_completed|yesno:"yes, no" }}</td>
+                                <td>{{ task.notes }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
