--- a/projects/templates/projects/show_project.html
+++ b/projects/templates/projects/show_project.html
@@ -3,11 +3,13 @@
 {% block content %}
     <main>
         <div class="project-detail">
-            <h1>{{ show_project.name }}</h1>
-            <p>{{ show_project.description }}</p>
             <p>
+                <a href="{% url 'edit_project' show_project.id %}">Edit Project</a>
+                <a href="{% url 'delete_project' show_project.id %}">Delete Project</a>
                 <a href="{% url 'create_task' %}">Create Task</a>
             </p>
+            <h1>{{ show_project.name }}</h1>
+            <p>{{ show_project.description }}</p>
             <h2>Tasks</h2>
             {% if show_project.tasks.count > 0 %}
                 <table>
